logs/yos-social-sdk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/oauthlib'...
Listing './lib/python3.5/site-packages/openid'...
Compiling './lib/python3.5/site-packages/openid/dh.py'...
***   File "./lib/python3.5/site-packages/openid/dh.py", line 8
    xor = lambda (a, b): chr(ord(a) ^ ord(b))
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/fetchers.py'...
***   File "./lib/python3.5/site-packages/openid/fetchers.py", line 209
    except urllib2.HTTPError, why:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/message.py'...
***   File "./lib/python3.5/site-packages/openid/message.py", line 104
    raise NamespaceAliasRegistrationError, \
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/oidutil.py'...
***   File "./lib/python3.5/site-packages/openid/oidutil.py", line 167
    except binascii.Error, why:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/urinorm.py'...
***   File "./lib/python3.5/site-packages/openid/urinorm.py", line 76
    map(lambda (m, n): u'%s-%s' % (unichr(m), unichr(n)),
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/yahoo'...
Listing './lib/python3.5/site-packages/yos_social_sdk-0.0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
